# django-docker-test-env

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy_to_cloudrun.yml
composeexample/: settings.py
myapp/: views.py
myapp/.github/workflows/: deploy_to_cloudrun.yml
myproject/: settings.py  urls.py
