[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["koga yusuke <popweb782@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
